# b-tree-on-disk

./: CMakeLists.txt  README.md
b+tree-v2.0/: CMakeLists.txt  CMakeLists.txt.in  main.cpp
b+tree-v2.0/src/utec/disk/: btree.h  iterator.h
b+tree-v2.0/src/utec/memory/: btree.cpp
b+tree-v2.0/tests/disk/: testing.cpp
b+tree-v2.0/tests/memory/: testing.cpp
conda/recipes/utecdf/: build.sh
src/utec/disk/: btree.hpp  iterator.hpp  node.h  node.hpp  pagemanager.cpp  pagemanager.h  pagemanager.hpp
src/utec/memory/: btree.cpp  btree.h
tests/disk/: testing.cpp
tests/memory/: testing.cpp
tests/utec/disk/: btree_test.cpp
tests/utec/memory/: btree_test.cpp
